# Anki-slicer

./: .gitignore  README.md  SegmentAdjusterWidget.py  cleanup_srt.py  dev-requirements.txt  main.py  player.py  pyproject.toml  requirements.txt  slicer.py  srt_processor.py  subs.py  test-image.md  ui.py
.github/: Anki-slicer.code-workspace  copilot-instructions.md
anki_slicer/: __main__.py  ankiconnect.py  config.py  i18n.py  junk.txt  main.py  mobile_screens.py  player.py  segment_adjuster.py  subs.py  ui.py
anki_slicer/locale/: anki_slicer_en.ts  anki_slicer_en_US.ts
anki_slicer/youtube/: __init__.py  audio.py  captions.py  embed_view.py
docs/: accessibility_checklist.md  feature_youtube_workflow_plan.md
scripts/: append_conversation_log.py  get_issue.py  list_open_issues.py  prototype_kivy_player.py  prototype_youtube_webengine.py  update_translations.sh
test_env/: pyvenv.cfg
venv_priv/: pyvenv.cfg
