[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anki-slicer"
version = "0.3.2"  # ⬅️ bump this every release (PyPI enforces immutability)
description = "Slice audio and subtitles into Anki cards for language learning"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
  { name = "Lee Hunter" }
]

keywords = [
  "anki",
  "anki-connect",
  "language-learning",
  "audio",
  "subtitles",
  "srt",
  "anki-deck"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Topic :: Education",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "PyQt6>=6.6.0",
  "pydub>=0.25.1",
]

[project.scripts]
anki-slicer = "anki_slicer.__main__:main"