[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anki-slicer"
version = "0.3.3"  # ⬅️ bump this every release (PyPI enforces immutability)
description = "Slice audio and subtitles into Anki cards for language learning"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"

authors = [
  { name = "Lee Hunter" }
]

keywords = [
  "anki",
  "anki-connect",
  "language-learning",
  "audio",
  "subtitles",
  "srt",
  "anki-deck"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Topic :: Education",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "PyQt6>=6.6.0",
  "pydub>=0.25.1",
]

[project.scripts]
anki-slicer = "anki_slicer.__main__:main"

# Tell setuptools to only package anki_slicer* and ignore other top-level dirs
[tool.setuptools.packages.find]
include = ["anki_slicer*"]
exclude = ["tests*", "images*", "test_env*", "anki_clips*"]

# Being explicit (defaults are fine, but this avoids surprises)
[tool.setuptools]
include-package-data = false